server.R documentation almost done

--- a/vignettes/global.Rmd
+++ b/vignettes/global.Rmd
@@ -5,16 +5,19 @@ output:
  toc: yes
  toc_depth: 2
  toc_float: yes
+ number_sections: true
 ---
 The global.R file is run once before your app starts. 
 Any R objects created here global.R file become available to the app.R file, 
 the ui.R and the server.R files. 
+# Main parameters
 
 ```{r }
-#
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# ~  Main parameters ----
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ```
 
-# Main parameters
 The application has been built to work with two main data sources: 
 contact tracing data from KoboCollect-exported csv files,
 and contact tracing data from a Go.Data instance (by direct API connection)
@@ -24,13 +27,7 @@ This ensures that the correct data import elements are loaded in the app,
 either the elements for KoboCollect csv import and processing, 
 or the elements for connecting to, and downloading from the Go.Data instance.
 
-
-
-
 ```{r }
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# ~  Main parameters ----
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 PARAMS <- list()
 #PARAMS$country_code <- "UGA"
 #PARAMS$country_code <- "CDO"
@@ -40,13 +37,17 @@ PARAMS$fake_data <- TRUE
 ```
 
 # Packages 
+
+```{r }
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# ~  Packages ----
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+```
+
 I would normally load packages with `pacman::p_load` 
 but I had some trouble with this when deploying to shiny 
 
 ```{r message=FALSE, warning=FALSE, fig.width=7}
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# ~  Packages ----
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 library(remotes)
 if (!webshot::is_phantomjs_installed()) webshot::install_phantomjs()
 library(webshot)  ##  for screenshots of htmlwidgets when outputting
@@ -98,24 +99,32 @@ library(tidyverse) ## tidyverse called last to avoid masking
 ```
 
 # Misc options
-A few miscellaneous settings
 
 ```{r }
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~  Misc options ----
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+```
+
+A few miscellaneous settings
+
+```{r }
 options(scipen = 999) # turn off scientific notation
 set.seed(1) # fix seed
 options(tibble.print_max = 35, tibble.print_min = 35) # personal preference
 ```
 
 # Misc functions
-Random functions used throughout the application
 
 ```{r }
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~ Misc functions ----
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+```
+
+Random functions used throughout the application
+
+```{r }
 source(here("helper_scripts/misc_functions.R"), local = T)
 ```
 
@@ -207,11 +216,11 @@ legend_df <-
 }
 ```
 
-## Highcharter theme
+# Highcharter themes
 
 ```{r }
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# ~~ highcharter themes ----
+# ~~ Highcharter themes ----
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 # ~~~~ Palette ----
@@ -234,10 +243,11 @@ new_colors <-
 highcharter_palette <- c(highcharter_palette_initial, new_colors)
 ```
 
-### Menu items for highcharter
+## Menu items for highcharter
 
 ```{r }
 # ~~~~ Menu items for highcharter ----
+
 myMenuItems <-
   c(
     "printChart",
@@ -253,7 +263,7 @@ myMenuItems <-
   )
 ```
 
-### Combine into final theme
+## Combine into final theme
 
 ```{r }
 # ~~~~ Combine into final theme ----
@@ -277,9 +287,12 @@ newtheme <-
   )
 
 options(highcharter.theme = newtheme)
+```
 
+## Theme for sparklines in value boxes
 
-# ~~~ theme for sparklines in value boxes ----
+```{r }
+# ~~~ Theme for sparklines in value boxes ----
 ```
 
 This theme is very minimalist. Equivalent to theme_void in ggplot. 
